# connect

./: .env  .gitignore  Cargo.toml  readme.md
database/: Cargo.toml
database/bindings/: Device.ts  DeviceMetadata.ts  EventType.ts  MobileMetadata.ts  RequestType.ts
database/migrations/: 000000000001_subscription.sql  000000000001_test_table.sql  000000000002_registered_apps.sql  000000000003_sessions.sql  000000000004_request_status.sql  000000000004_requests.sql  000000000005_requests.sql  000000000006_create_hypertables.sql  000000000007_app_queries.sql  000000000007_requests_count.sql  000000000007_requests_stats.sql  000000000008_session_stats.sql  0001_types.sql  0002_team.sql  0003_grafana_users.sql  0003_users.sql  0004_registered_apps.sql  0005_user_app_privilages.sql  0006_client_profiles.sql  0006_requests.sql  0006_sessions.sql  0007_requests.sql  0007_sessions.sql  0008_create_hypertables.sql  0008_public_keys.sql  0008_requests_stats.sql  0009_connection_events.sql  0009_requests_stats.sql  0009_session_stats.sql  0010_ip_addresses.sql  0010_requests.sql  0011_create_hypertables.sql  0011_events_index.sql  0012_events.sql  0012_events_tables.sql  0012_requests_stats.sql  0013_session_stats.sql  0013_team_invites.sql  0014_connection_stats.sql  0014_create_hypertables.sql  (+11 more)
database/src/: db.rs  lib.rs  main.rs
database/src/aggregated_views_queries/: connections_stats.rs  events_stats.rs  mod.rs  requests_stats.rs  session_average_time.rs  sessions_stats.rs
database/src/structs/: client_data.rs  consts.rs  db_error.rs  device_metadata.rs  domain_verification_status.rs  entity_type.rs  event_type.rs  filter_requests.rs  geo_location.rs  medium_type.rs  mod.rs  pagination_cursor.rs  privelage_level.rs  privilege_level.rs  request_status.rs  request_type.rs  session_type.rs  subscription.rs  time_filters.rs  whitelisted_domain.rs
database/src/tables/: mod.rs  test_utils.rs  utils.rs
openapi/: Cargo.toml  README.md
openapi/docs/: AccessControlApi.md  AccessControlProvisioningApi.md  ActiveSyncStatusDto.md  ActiveUserStats.md  AddApiKeyCommand.md  AddDataSource200Response.md  AddDataSourceCommand.md  AddInviteForm.md  AddOrgUserCommand.md  AddServiceAccountTokenCommand.md  AddTeamMemberCommand.md  AddTeamRoleCommand.md  AddUserRoleCommand.md  Address.md  AdminApi.md  AdminCreateUserForm.md  AdminCreateUserResponse.md  AdminLdapApi.md  AdminProvisioningApi.md  AdminStats.md  AdminUpdateUserPasswordForm.md  AdminUpdateUserPermissionsForm.md  AdminUsersApi.md  Alert.md  AlertDiscovery.md  AlertGroup.md  AlertInstancesResponse.md  AlertManager.md  AlertManagersResult.md  AlertQuery.md  AlertQueryExport.md  AlertResponse.md  AlertRuleExport.md  AlertRuleGroup.md  AlertRuleGroupExport.md  AlertRuleGroupMetadata.md  AlertRuleNotificationSettings.md  AlertRuleNotificationSettingsExport.md  AlertStatus.md  AlertingFileExport.md  (+370 more)
openapi/src/apis/: access_control_api.rs  access_control_provisioning_api.rs  admin_api.rs  admin_ldap_api.rs  admin_provisioning_api.rs  admin_users_api.rs  annotations_api.rs  api_keys_api.rs  configuration.rs  correlations_api.rs  dashboard_permissions_api.rs  dashboard_public_api.rs  dashboard_versions_api.rs  dashboards_api.rs  datasources_api.rs  devices_api.rs  ds_api.rs  enterprise_api.rs  folder_permissions_api.rs  folders_api.rs  get_current_org_api.rs  ldap_debug_api.rs  library_elements_api.rs  licensing_api.rs  migrations_api.rs  mod.rs  org_api.rs  org_invites_api.rs  org_preferences_api.rs  orgs_api.rs  playlists_api.rs  provisioning_api.rs  query_history_api.rs  recording_rules_api.rs  reports_api.rs  saml_api.rs  search_api.rs  service_accounts_api.rs  signed_in_user_api.rs  signing_keys_api.rs  (+7 more)
openapi/src/models/: active_sync_status_dto.rs  active_user_stats.rs  add_api_key_command.rs  add_data_source_200_response.rs  add_data_source_command.rs  add_invite_form.rs  add_org_user_command.rs  add_service_account_token_command.rs  add_team_member_command.rs  add_team_role_command.rs  add_user_role_command.rs  address.rs  admin_create_user_form.rs  admin_create_user_response.rs  admin_stats.rs  admin_update_user_password_form.rs  admin_update_user_permissions_form.rs  alert.rs  alert_discovery.rs  alert_group.rs  alert_instances_response.rs  alert_manager.rs  alert_managers_result.rs  alert_query.rs  alert_query_export.rs  alert_response.rs  alert_rule_export.rs  alert_rule_group.rs  alert_rule_group_export.rs  alert_rule_group_metadata.rs  alert_rule_notification_settings.rs  alert_rule_notification_settings_export.rs  alert_status.rs  alerting_file_export.rs  alerting_rule.rs  alerting_status.rs  alertmanager_config.rs  alertmanager_status.rs  annotation.rs  annotation_actions.rs  (+326 more)
server/: Cargo.toml
server/bindings/: AlreadyConnected.ts  AppConnectEvent.ts  AppDisconnectEvent.ts  AppDisconnectedEvent.ts  AppInfo.ts  AppLinks.ts  AppMessage.ts  AppToServer.ts  ChangeNetworkEvent.ts  ChangeNetworkResolveEvent.ts  ChangeWalletEvent.ts  ClientConnectEvent.ts  ClientConnectInitEvent.ts  ClientConnectResolveEvent.ts  ClientDisconnectEvent.ts  ClientInitializeResponse.ts  ClientToServer.ts  CloudApiErrors.ts  ConnectRequest.ts  ConnectResponse.ts  Deeplink.ts  DropSessionsRequest.ts  EventData.ts  GetInfoRequest.ts  GetInfoResponse.ts  GetPendingRequestsResponse.ts  GetSessionsResponse.ts  HttpAcceptTeamInviteResponse.ts  HttpAddPasskeyFinishResponse.ts  HttpAddUserToTeamRequest.ts  HttpCancelPendingDomainVerificationResponse.ts  HttpChangeUsersPrivilegesRequest.ts  HttpCloudEndpoint.ts  HttpConnectSessionRequest.ts  HttpDeleteAccountFinishRequest.ts  HttpDeleteAccountStartRequest.ts  HttpDeleteAppRequest.ts  HttpDeleteTeamRequest.ts  HttpDropSessionsRequest.ts  HttpEndpoint.ts  (+78 more)
server/src/: cloud_state.rs  env.rs  errors.rs  handle_error.rs  infra_env.rs  ip_geolocation.rs  lib.rs  router.rs  sesssion_cleaner.rs  state.rs  statics.rs  test_env.rs  test_utils.rs  utils.rs  wallets.rs
server/src/app/: app_handler.rs  mod.rs
server/src/auth/: auth_middleware.rs  auth_token.rs  auth_token_type.rs  mod.rs
server/src/http/: mod.rs  (+8 more)
(+706 files in other folders)
