[workspace]
resolver = "2"
members = ["server", "database"]

[workspace.dependencies]
ctrlc = "3.4.2"
serde = { version = "1.0.196", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
once_cell = "1.19.0"
anyhow = "1.0.79"
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
dotenvy = "0.15.7"
ts-rs = "6.2.1"
uuid7 = { version = "0.7.2" }
log = "0.4.20"

futures = "0.3.30"
axum = { version = "0.7.4", features = ["ws", "macros"] }
tower = { version = "0.4.13", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
reqwest = "0.11.24"
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"

sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "macros", "postgres", "time"] }