[workspace]
resolver = "2"
members = ["server", "database", "openapi"]

[workspace.dependencies]
ctrlc = "3.4.2"
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
once_cell = "1.19.0"
garde = { version = "0.18.0", features = ["derive", "email", "regex"] }
anyhow = "1.0.79"
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
dotenvy = "0.15.7"
ts-rs = { version = "6.2.1", features = ["serde-compat", "chrono-impl"] }
uuid7 = { version = "0.7.2" }
rand = "0.8.5"
log = "0.4.20"
jsonwebtoken = "9.2.0"
pwhash = "1.0.0"
futures = "0.3.30"
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower = { version = "0.4.13", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
reqwest = {version = "0.11.24", features = ["json"]}
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
r-cache = "0.5.0"
lettre = "0.11.6"
addr = "0.15.6"
hickory-resolver = "0.24.0"
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation",
] }

# If you're updating sqlx, make sure that chrono version below is the same as the one in sqlx
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
] }
chrono = { version = "0.4.22", features = ["serde"] }

[profile.dev]
debug = 0
strip = "debuginfo"
