[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }