[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
axum_garde = { workspace = true }
garde = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
uuid7 = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
axum = { version = "0.6.12", features = ["ws"] }
axum-extra = { version = "0.7.2" }
axum-macros = "0.3.7"
tower = { version = "0.4", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
hyper = { version = "0.14.14", features = ["stream"] }
async-trait = "0.1.68"
axum-server = { version = "0.5", features = ["tls-rustls"] }
once_cell = "1.18.0"
shellexpand = "3.1.0"
cors = "0.1.0"
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.37"
