[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }

serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
uuid7 = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
pwhash = { workspace = true }
rand = { workspace = true }
